--- a/src/Login.form
+++ b/src/Login.form
@@ -51,7 +51,7 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="WELVOME BACK"/>
+          <text value="WELCOME BACK"/>
         </properties>
       </component>
     </children>
