--- a/src/Login.form
+++ b/src/Login.form
@@ -40,13 +40,15 @@
           <text value="Contraseña:"/>
         </properties>
       </component>
-      <component id="f3a13" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+      <component id="f3a13" class="javax.swing.JTextField" binding="ingreseSuUsuarioTextField" default-binding="true">
         <constraints>
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <text value="Ingrese su usuario"/>
+        </properties>
       </component>
       <component id="3f8d5" class="javax.swing.JLabel" binding="JLingreseUsuario">
         <constraints>
@@ -65,13 +67,15 @@
           <text value="Seleccione su tipo de usuario:"/>
         </properties>
       </component>
-      <component id="87a2e" class="javax.swing.JPasswordField" binding="passwordField1" default-binding="true">
+      <component id="87a2e" class="javax.swing.JPasswordField" binding="contraseniaPasswordField" default-binding="true">
         <constraints>
           <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <text value="contrasenia"/>
+        </properties>
       </component>
       <component id="44dc1" class="javax.swing.JComboBox" binding="CBRoldeUsuario">
         <constraints>
