--- a/src/Login.form
+++ b/src/Login.form
@@ -21,6 +21,7 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Times New Roman" size="20" style="0"/>
           <text value="El Buho -- Software Developmean"/>
         </properties>
       </component>
@@ -29,6 +30,7 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Times New Roman" size="18" style="0"/>
           <text value="WELCOME BACK"/>
         </properties>
       </component>
@@ -37,6 +39,7 @@
           <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Times New Roman" size="14" style="0"/>
           <text value="Contraseña:"/>
         </properties>
       </component>
@@ -47,6 +50,7 @@
           </grid>
         </constraints>
         <properties>
+          <font name="Times New Roman" size="12" style="0"/>
           <text value="Ingrese su usuario"/>
         </properties>
       </component>
@@ -64,6 +68,7 @@
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Times New Roman" size="14" style="0"/>
           <text value="Seleccione su tipo de usuario:"/>
         </properties>
       </component>
@@ -74,6 +79,7 @@
           </grid>
         </constraints>
         <properties>
+          <font name="Times New Roman" size="12" style="0"/>
           <text value="contrasenia"/>
         </properties>
       </component>
@@ -82,6 +88,7 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Times New Roman" size="12" style="0"/>
           <model>
             <item value="Administrador"/>
             <item value="Cajero"/>
