--- a/src/Login.form
+++ b/src/Login.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Login">
-  <grid id="27dc6" binding="FLogin" layout-manager="GridLayoutManager" row-count="8" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="FLogin" layout-manager="GridLayoutManager" row-count="9" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="20" left="20" bottom="20" right="20"/>
     <constraints>
-      <xy x="20" y="20" width="527" height="431"/>
+      <xy x="20" y="20" width="623" height="466"/>
     </constraints>
     <properties>
       <foreground color="-262663"/>
@@ -97,11 +97,19 @@
       </component>
       <component id="272fc" class="javax.swing.JLabel" binding="JLImagenBuho">
         <constraints>
-          <grid row="0" column="2" row-span="8" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="2" row-span="9" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <icon value="imagenes/Buhocool2.png"/>
           <text value=""/>
+        </properties>
+      </component>
+      <component id="53c27" class="javax.swing.JButton" binding="JBiniciarsecion">
+        <constraints>
+          <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Ingresar al sistema"/>
         </properties>
       </component>
     </children>
