--- a/src/Cajero.form
+++ b/src/Cajero.form
@@ -66,9 +66,11 @@
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <model/>
+        </properties>
       </component>
-      <component id="32446" class="javax.swing.JLabel" binding="JLgetDescripoPro">
+      <component id="32446" class="javax.swing.JLabel" binding="JTsetDescripoPro">
         <constraints>
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -92,7 +94,7 @@
           <text value="Unidades disponibles:"/>
         </properties>
       </component>
-      <component id="c4291" class="javax.swing.JLabel">
+      <component id="c4291" class="javax.swing.JLabel" binding="JTsetPrecio">
         <constraints>
           <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -100,7 +102,7 @@
           <text value="......"/>
         </properties>
       </component>
-      <component id="75488" class="javax.swing.JLabel">
+      <component id="75488" class="javax.swing.JLabel" binding="JTsetUnidad">
         <constraints>
           <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
