--- a/src/AdminNewCajero.form
+++ b/src/AdminNewCajero.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="AdminNewCajero">
-  <grid id="27dc6" binding="JPadmpag4" layout-manager="GridLayoutManager" row-count="7" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="JPadmpag4" layout-manager="GridLayoutManager" row-count="8" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
       <xy x="20" y="20" width="575" height="400"/>
@@ -50,33 +50,33 @@
           <grid row="1" column="0" row-span="1" col-span="4" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <component id="1d4ca" class="javax.swing.JLabel">
+      <component id="1d4ca" class="javax.swing.JLabel" binding="JLTCedula">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Label"/>
+          <text value="Cedula:"/>
         </properties>
       </component>
-      <component id="a0e69" class="javax.swing.JLabel">
+      <component id="a0e69" class="javax.swing.JLabel" binding="JLNombre">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Label"/>
+          <text value="Nombre:"/>
         </properties>
       </component>
-      <component id="bee78" class="javax.swing.JLabel">
+      <component id="bee78" class="javax.swing.JLabel" binding="JLdireccion">
         <constraints>
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Label"/>
+          <text value="Direccion:"/>
         </properties>
       </component>
       <component id="b25d7" class="javax.swing.JButton" binding="JBborracampos">
         <constraints>
-          <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Borrar campos"/>
@@ -84,13 +84,13 @@
       </component>
       <component id="ff72e" class="javax.swing.JButton" binding="JBagregarempleado">
         <constraints>
-          <grid row="6" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Guardar empleado"/>
         </properties>
       </component>
-      <component id="f8db0" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+      <component id="f8db0" class="javax.swing.JTextField" binding="JTFcedula">
         <constraints>
           <grid row="3" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -98,7 +98,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="a200a" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+      <component id="a200a" class="javax.swing.JTextField" binding="JTFnombre">
         <constraints>
           <grid row="4" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -106,7 +106,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="631c" class="javax.swing.JTextField" binding="textField3" default-binding="true">
+      <component id="631c" class="javax.swing.JTextField" binding="JTFdireccion">
         <constraints>
           <grid row="5" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -121,6 +121,22 @@
         <properties>
           <text value="Ingrese los datos del nuevo empleado"/>
         </properties>
+      </component>
+      <component id="d8615" class="javax.swing.JLabel" binding="JLcelular">
+        <constraints>
+          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Celular:"/>
+        </properties>
+      </component>
+      <component id="935ab" class="javax.swing.JTextField" binding="JTFcelular">
+        <constraints>
+          <grid row="6" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
       </component>
     </children>
   </grid>
