--- a/src/AdminNewProducto.form
+++ b/src/AdminNewProducto.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="AdminNewProducto">
-  <grid id="27dc6" binding="JPadmpag2" layout-manager="GridLayoutManager" row-count="7" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="JPadmpag2" layout-manager="GridLayoutManager" row-count="8" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="533" height="400"/>
+      <xy x="20" y="20" width="553" height="400"/>
     </constraints>
     <properties>
       <background color="-1"/>
@@ -49,17 +49,17 @@
           <text value="Agregar un nuevo producto"/>
         </properties>
       </component>
-      <component id="5bcd2" class="javax.swing.JLabel">
+      <component id="5bcd2" class="javax.swing.JLabel" binding="JLcodigo">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Label"/>
+          <text value="Codigo:"/>
         </properties>
       </component>
       <component id="2887" class="javax.swing.JButton" binding="JBborracampos">
         <constraints>
-          <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <label value="Borrar campos"/>
@@ -68,13 +68,13 @@
       </component>
       <component id="c4a81" class="javax.swing.JButton" binding="JBguardar">
         <constraints>
-          <grid row="6" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Guardar producto"/>
         </properties>
       </component>
-      <component id="6396f" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+      <component id="6396f" class="javax.swing.JTextField" binding="JTFcodigo">
         <constraints>
           <grid row="3" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -82,15 +82,15 @@
         </constraints>
         <properties/>
       </component>
-      <component id="77ea2" class="javax.swing.JLabel">
+      <component id="77ea2" class="javax.swing.JLabel" binding="JLnombre">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Label"/>
+          <text value="Nombre:"/>
         </properties>
       </component>
-      <component id="f610c" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+      <component id="f610c" class="javax.swing.JTextField" binding="JTFnombre">
         <constraints>
           <grid row="4" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -98,15 +98,15 @@
         </constraints>
         <properties/>
       </component>
-      <component id="d1a16" class="javax.swing.JLabel">
+      <component id="d1a16" class="javax.swing.JLabel" binding="JLstock">
         <constraints>
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Label"/>
+          <text value="STOCK:"/>
         </properties>
       </component>
-      <component id="6c1db" class="javax.swing.JTextField" binding="textField3" default-binding="true">
+      <component id="6c1db" class="javax.swing.JTextField" binding="JTFstock">
         <constraints>
           <grid row="5" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -121,6 +121,22 @@
         <properties>
           <text value="Ingrese los datos del nuevo producto"/>
         </properties>
+      </component>
+      <component id="53c67" class="javax.swing.JLabel" binding="JLprecio">
+        <constraints>
+          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="JLprecio"/>
+        </properties>
+      </component>
+      <component id="7a2f8" class="javax.swing.JTextField" binding="JFTprecio">
+        <constraints>
+          <grid row="6" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
       </component>
     </children>
   </grid>
