--- a/src/AdminNewProducto.form
+++ b/src/AdminNewProducto.form
@@ -127,7 +127,7 @@
           <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="JLprecio"/>
+          <text value="Precio:"/>
         </properties>
       </component>
       <component id="7a2f8" class="javax.swing.JTextField" binding="JFTprecio">
