--- a/src/Login.form
+++ b/src/Login.form
@@ -6,6 +6,7 @@
       <xy x="20" y="20" width="623" height="466"/>
     </constraints>
     <properties>
+      <background color="-1"/>
       <foreground color="-262663"/>
       <preferredSize width="600" height="421"/>
     </properties>
@@ -43,7 +44,7 @@
           <text value="Contraseña:"/>
         </properties>
       </component>
-      <component id="f3a13" class="javax.swing.JTextField" binding="ingreseSuUsuarioTextField" default-binding="true">
+      <component id="f3a13" class="javax.swing.JTextField" binding="JTFusuario">
         <constraints>
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -72,7 +73,7 @@
           <text value="Seleccione su tipo de usuario:"/>
         </properties>
       </component>
-      <component id="87a2e" class="javax.swing.JPasswordField" binding="contraseniaPasswordField" default-binding="true">
+      <component id="87a2e" class="javax.swing.JPasswordField" binding="JTFpassword">
         <constraints>
           <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -83,7 +84,7 @@
           <text value="contrasenia"/>
         </properties>
       </component>
-      <component id="44dc1" class="javax.swing.JComboBox" binding="CBRoldeUsuario">
+      <component id="44dc1" class="javax.swing.JComboBox" binding="JCBroldeUsuario">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
