--- a/src/AdminPag1.form
+++ b/src/AdminPag1.form
@@ -44,12 +44,12 @@
           <text value="Nombre:"/>
         </properties>
       </component>
-      <component id="12a0f" class="javax.swing.JLabel" binding="JLapellido">
+      <component id="12a0f" class="javax.swing.JLabel" binding="JLcedula">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Apellido:"/>
+          <text value="Cédula:"/>
         </properties>
       </component>
       <component id="c1113" class="javax.swing.JLabel" binding="JLcargo">
@@ -68,7 +68,7 @@
           <text value="................"/>
         </properties>
       </component>
-      <component id="12c75" class="javax.swing.JLabel" binding="JLsetapellido">
+      <component id="12c75" class="javax.swing.JLabel" binding="JLsetcedula">
         <constraints>
           <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
